--- a/LuaStubsTool/_examplevscode_settings.json
+++ b/LuaStubsTool/_examplevscode_settings.json
@@ -3,6 +3,11 @@
     "${workspaceFolder}/_stubs/x4_api_stubs.lua",
     "${workspaceFolder}/_stubs/x4_api_stubs_custom.lua"
   ],
-  "Lua.diagnostics.globals": [
-  ]
+
+  "luacheck.config": ".luacheckrc",
+  "luacheck.args": [
+    "--std", "lua51"
+  ],
+
+  "Lua.runtime.version": "Lua 5.1"
 }
